// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewBuilder Filter creates a view with multiple filters and conjunctions 1`] = `
Object {
  "map": "function (doc) {
      if (doc.modelId === \\"14f1c4e94d6a47b682ce89d35d4c78b0\\" && doc[\\"Name\\"] === \\"Test\\" || doc[\\"Yes\\"] > \\"Value\\") {
        emit(doc._id);
      }
    }",
  "meta": Object {
    "field": undefined,
    "filters": Array [
      Object {
        "condition": "EQUALS",
        "key": "Name",
        "value": "Test",
      },
      Object {
        "condition": "MT",
        "conjunction": "OR",
        "key": "Yes",
        "value": "Value",
      },
    ],
    "groupBy": undefined,
    "modelId": "14f1c4e94d6a47b682ce89d35d4c78b0",
    "schema": Object {
      "avg": "number",
      "count": "number",
      "max": "number",
      "min": "number",
      "sum": "number",
      "sumsqr": "number",
    },
  },
  "reduce": "_stats",
}
`;

exports[`viewBuilder Group By creates a view emitting the group by field 1`] = `
Object {
  "map": "function (doc) {
      if (doc.modelId === \\"14f1c4e94d6a47b682ce89d35d4c78b0\\" ) {
        emit(doc[\\"age\\"], doc[\\"score\\"]);
      }
    }",
  "meta": Object {
    "field": "score",
    "filters": Array [],
    "groupBy": "age",
    "modelId": "14f1c4e94d6a47b682ce89d35d4c78b0",
    "schema": Object {
      "avg": "number",
      "count": "number",
      "max": "number",
      "min": "number",
      "sum": "number",
      "sumsqr": "number",
    },
  },
  "reduce": "_stats",
}
`;
